Cambié todo a inglés

--- a/docs/2. Publications/2.01_Journals.md
+++ b/docs/2. Publications/2.01_Journals.md
@@ -1,5 +1,4 @@
-# 2. Publicaciones Científicas
-## 2.1 Artículos Originales de Investigación 
+# 2. Scientific Publications 
 ### 2.1.a Artículos en Revistas Internacionales
 
 1.	Tonatiuh Matos. 
@@ -492,7 +491,7 @@ The conformal transformation's controversy: what are we missing?
 Gen. Rel. Grav.t45, (2013), 489 - 518. arXiv:1108.5857.
 doi.org/10.1007/s10714-012-1484-7
 
-103..	Ivan Rodriguez Montoya, Abdel Pérez-Lorenzana, Eduard de la Cruz, Yannick Giraud-Héraud and Tonatiuh Matos. 
+103. Ivan Rodriguez Montoya, Abdel Pérez-Lorenzana, Eduard de la Cruz, Yannick Giraud-Héraud and Tonatiuh Matos. 
 Cosmic Bose dark matter. 
 Phys. Rev. D87, (2013), 025009. arXiv:1110.2751 
 doi.org/10.1103/PhysRevD.87.025009
