--- a/docs/2. Publications/2.12_Audivisuals.md
+++ b/docs/2. Publications/2.12_Audivisuals.md
@@ -1,6 +1,6 @@
 ### 2.12.b Trabajos Audiovisuales
 
-Video: ¿De que está hecho el Universo?: http://www.youtube.com/watch?v=HLyIwbqMokI&feature=youtu.be. Más de 11 300 visitas.
+Video: ¿De que está hecho el Universo?: [http://www.youtube.com/watch?v=HLyIwbqMokI&feature=youtu.be](http://www.youtube.com/watch?v=HLyIwbqMokI&feature=youtu.be). Más de 11 300 visitas.
 
 Video: Versión Científica del Génesis:
-http://www.youtube.com/watch?v=tn-DNPpWK7w&feature=youtu.be. Más de  4 600 visitas.
+[http://www.youtube.com/watch?v=tn-DNPpWK7w&feature=youtu.be](http://www.youtube.com/watch?v=tn-DNPpWK7w&feature=youtu.be). Más de  4 600 visitas.
